# Lumina

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build&Deploy.yml
examples/: test.lum
src/: CMakeLists.txt  Parser.cpp  Parser.h  ast.h  lexer.cpp  lexer.h  main.cpp
